--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test:selenium": "npx wdio config/seleniumStandalone.conf.js",
     "test:api": "npx wdio config/api.conf.js",
-    "test:visual": "npx wdio config/visualTest.conf.js"
+    "test:visual": "npx wdio config/visualTest.conf.js",
+    "repl": "wdio repl chrome"
   },
   "repository": {
     "type": "git",
@@ -15,9 +16,11 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chai": "^4.2.12",
+    "@types/cucumber": "^6.0.1",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.6.4",
     "@wdio/cli": "^6.4.6",
+    "@wdio/cucumber-framework": "^6.4.3",
     "@wdio/local-runner": "^6.4.6",
     "@wdio/mocha-framework": "^6.4.0",
     "@wdio/selenium-standalone-service": "^6.4.0",
